Resolves: tdf#100438 focus trapped in disabled toolbar

lets just leave the toolbar active the whole time, seems
to make more sense anyway wrt being allowed to keyboard
into it to paste/insert special character

Change-Id: I174fb707c4c7fd21d95461cc93323eb6d8970818
(cherry picked from commit 4bd53cd880ecfa9af27735344bf57fb45de20c25)
Reviewed-on: https://gerrit.libreoffice.org/33785
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>